Debug + serialization try